--- a/animation-svg/index.html
+++ b/animation-svg/index.html
@@ -10,17 +10,17 @@
 <body>
     <div class="icon-container">
         <div class="iconsvg iconsvg-eolienne">
-            <svg viewBox="0 0 45 50.3"
-                width="60"
-                height="60"
-                preserveAspectRatio="xMidYMid meet">
+            <svg width="60"
+                 height="60"
+                 viewBox="0 0 45 50.3"
+                 preserveAspectRatio="xMidYMid meet">
                 <circle class="icon-color-stroke center" cx="22.1" cy="26" r="4"/>
-                <path id="XMLID_9_" class="icon-color-stroke pale" d="M21.2,22.1L17.8,6.5c-0.5-2.1,0.9-4,3-4.2c2.1-0.2,4.3,1.5,4.8,3.6l1.1,4.7
-                            c0.5,2.1-0.5,5-2.2,6.4l-3.8,3.1"/>
+                <path class="icon-color-stroke pale" d="M21.2,22.1L17.8,6.5c-0.5-2.1,0.9-4,3-4.2c2.1-0.2,4.3,1.5,4.8,3.6l1.1,4.7
+                                c0.5,2.1-0.5,5-2.2,6.4l-3.8,3.1"/>
                 <path class="icon-color-stroke pale" d="M19.2,28.7L7.3,39.5C5.7,41,3.4,40.7,2.2,39c-1.2-1.8-0.9-4.5,0.7-6l3.5-3.4
-                            c1.6-1.5,4.6-2.1,6.6-1.3l4.6,1.8"/>
+                                c1.6-1.5,4.6-2.1,6.6-1.3l4.6,1.8"/>
                 <path class="icon-color-stroke pale" d="M25.9,27.2L41.2,32c2.1,0.7,3,2.8,2.1,4.7c-0.9,1.9-3.4,3-5.5,2.4l-4.7-1.4
-                            c-2.1-0.6-4.1-2.9-4.5-5.1l-0.8-4.9"/>
+                                c-2.1-0.6-4.1-2.9-4.5-5.1l-0.8-4.9"/>
                 <line class="icon-color-stroke" x1="24.1" y1="29.5" x2="24.1" y2="48"/>
                 <line class="icon-color-stroke" x1="20.1" y1="29.5" x2="20.1" y2="48"/>
            </svg>
@@ -224,7 +224,7 @@
                 width="60"
                 height="60"
                 preserveAspectRatio="xMidYMid meet">
-                <path id="XMLID_281_" class="icon-color-fill" d="M17.1,5.6c1-0.9,2.2-1.5,3.5-1.8c5.8-1.5,11.4,3.2,10.9,9.1c-0.2,2-0.9,3.8-2.3,5.3
+                <path class="icon-color-fill mains" d="M17.1,5.6c1-0.9,2.2-1.5,3.5-1.8c5.8-1.5,11.4,3.2,10.9,9.1c-0.2,2-0.9,3.8-2.3,5.3
                 c-0.3,0.3-0.6,0.5-0.8,0.8c-3,3-5.9,5.9-8.9,8.9c-0.2,0.2-0.3,0.4-0.5,0.5c-0.8,0.8-1.8,1-2.9,0.6c-1.1-0.4-1.7-1.2-1.9-2.3
                 c0-0.2,0-0.3-0.3-0.4c-1.3-0.1-2.4-1.2-2.5-2.6c0,0,0-0.1,0-0.1c-1.7-0.2-2.7-1.1-2.8-2.8c-0.6,0-1.2-0.2-1.7-0.6
                 c-0.5-0.4-0.8-0.8-1-1.4c-0.4,0.1-0.7-0.2-1-0.5c-2.2-2.5-2.9-5.4-1.9-8.6c1-3.2,3.2-5.2,6.5-5.9C12.1,3.2,14.9,3.7,17.1,5.6z
