--- a/animation-svg/index.html
+++ b/animation-svg/index.html
@@ -274,8 +274,8 @@
                     <line id="XMLID_24_" class="icon-color-stroke" x1="23.1" y1="22.2" x2="23.1" y2="18.1"/>
                     <line id="XMLID_23_" class="icon-color-stroke" x1="33.3" y1="22.2" x2="33.3" y2="18.1"/>
                     <circle id="XMLID_22_" class="icon-color-stroke" cx="28.2" cy="6.1" r="3.6"/>
-                    <polyline id="XMLID_21_" class="icon-color-stroke" points="23.1,32.5 28.2,29.7 33.4,32.5 	"/>
-                    <line id="XMLID_20_" class="icon-color-stroke" x1="28.2" y1="29.7" x2="28.2" y2="25.1"/>
+                    <polyline id="XMLID_21_" class="icon-color-stroke linebottom" points="23.1,32.5 28.2,29.7 33.4,32.5 	"/>
+                    <line id="XMLID_20_" class="icon-color-stroke linetop" x1="28.2" y1="29.7" x2="28.2" y2="25.1"/>
                     <path id="XMLID_19_" class="st10" d="M19.2,21.9"/>
                     <path id="XMLID_18_" class="icon-color-stroke" d="M28.2,15.5l-3.6-4.1c0,0-5.4,2.2-6.6,9.4c0,0-0.1,1.2,1.2,1.3h9"/>
                     <path id="XMLID_17_" class="icon-color-stroke" d="M28.2,15.5l3.6-4.1c0,0,5.4,2.2,6.6,9.4c0,0,0.1,1.2-1.2,1.3h-9.1"/>
@@ -338,7 +338,6 @@
                 c-0.1,0-0.1,0.1-0.2,0.2c5.8,0,11.6,0,17.4,0c-0.1-0.1-0.1-0.1-0.2-0.2c-0.7-0.6-1.5-1.1-2.2-1.7c-0.3-0.2-0.7-0.1-1-0.1
                 c-0.1,0-0.2,0.3-0.4,0.5c0.2,0,0.4,0,0.6,0c0,0.1,0,0.2,0,0.3c0,0.2,0,0.3,0,0.5c-3.7,0-7.3,0-11,0c0-0.3,0-0.5,0-0.8
                 C10.7,15.6,11.2,15.8,11.3,15.1z M20.9,8.7c-0.5-0.2-0.7,0-1,0.5C20.2,9,20.5,8.8,20.9,8.7z"/>
-                <path id="XMLID_12_" d="M20.9,8.7c-0.3,0.2-0.7,0.3-1,0.5C20.1,8.7,20.4,8.5,20.9,8.7z"/>
             </svg>
             <span>Vie démocratique<br /> et participation<br /> citoyenne</span>
         </div>
